--- a/src/components/advanced/Advanced.css
+++ b/src/components/advanced/Advanced.css
@@ -12,3 +12,23 @@
     top: 50%;
   }
 }
+
+@media screen and (min-width: 767px) and (max-width: 820px) {
+  .card article:nth-child(2) {
+    transform: translateX(-50%);
+  }
+
+  .line {
+    display: hidden;
+  }
+}
+
+@media screen and (min-width: 374px) and (max-width: 500px) {
+  section h2 {
+    margin-top: 2.5rem;
+  }
+
+  section .advancedCard {
+    margin-bottom: 1.3rem;
+  }
+}
